--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.example.app_praktisi" >
+    package="com.example.app_praktisi">
 
     <application
         android:allowBackup="true"
@@ -12,15 +12,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.App_Praktisi"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".DinarActivity"
+            android:exported="false" />
         <activity
             android:name=".HarezaActivity"
-            android:exported="false" />
-
-        <!--membuat halaman login menjadi halaman utama-->
+            android:exported="false" /> <!-- membuat halaman login menjadi halaman utama -->
         <activity
             android:name=".HomeActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
