--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,10 +14,11 @@
         android:theme="@style/Theme.App_Praktisi"
         tools:targetApi="31" >
         <activity
-            android:name=".HarezaActivity"
+            android:name=".DewaActivity"
             android:exported="false" />
-
-        <!--membuat halaman login menjadi halaman utama-->
+        <activity
+            android:name=".HarezaActivity"
+            android:exported="false" /> <!-- membuat halaman login menjadi halaman utama -->
         <activity
             android:name=".HomeActivity"
             android:exported="true" >
