--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.App_Praktisi"
         tools:targetApi="31">
         <activity
+            android:name=".RopiqActivity"
+            android:exported="false" />
+        <activity
             android:name=".DinarActivity"
             android:exported="false" />
         <activity
@@ -21,9 +24,7 @@
             android:exported="false" />
         <activity
             android:name=".HarezaActivity"
-            android:exported="false" /> 
-        
-        <!-- membuat halaman login menjadi halaman utama -->
+            android:exported="false" /> <!-- membuat halaman login menjadi halaman utama -->
         <activity
             android:name=".HomeActivity"
             android:exported="true">
